@@ -1,6 +1,11 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method("[",compareClusterResult)
+S3method("[[",compareClusterResult)
+S3method(dim,compareClusterResult)
 S3method(fortify,compareClusterResult)
+S3method(head,compareClusterResult)
+S3method(tail,compareClusterResult)
 export(GSEA)
 export(Gff2GeneTable)
 export(bitr)
@@ -87,10 +92,12 @@ importFrom(stats4,plot)
 importFrom(tidyr,gather)
 importFrom(utils,browseURL)
 importFrom(utils,citation)
+importFrom(utils,head)
 importFrom(utils,installed.packages)
 importFrom(utils,read.table)
 importFrom(utils,stack)
 importFrom(utils,str)
+importFrom(utils,tail)
 importMethodsFrom(AnnotationDbi,mappedkeys)
 importMethodsFrom(AnnotationDbi,mget)
 importMethodsFrom(DOSE,plot)
