@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/compareCluster.R
+% Please edit documentation in R/00-AllClasses.R
 \docType{class}
 \name{compareClusterResult-class}
 \alias{compareClusterResult-class}
